<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dip">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/regnum"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/etRegNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regnum_hint"
                android:inputType="textCapCharacters" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/fuel_up_date"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pick_date"
                android:clickable="true"
                android:focusable="false"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/travelled_km"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/etTravelledKm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/travelled_km_hint"
                android:inputType="numberDecimal" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/amount_of_liter"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/etAmountOfLiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_of_liter_hint"
                android:inputType="numberDecimal" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/price"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons"
                android:textColor="#fff"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/receipt_upload"
                android:id="@+id/btnAttach" />

        <ImageView
                android:id="@+id/imgReceipt"
                android:visibility="gone"
                android:layout_width="70dp"
                android:layout_height="70dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttons"
                android:textColor="#fff"
                android:text="@string/ok"
                android:layout_marginTop="20dp"
                android:id="@+id/btn_ok"/>

    </LinearLayout>
</ScrollView>