<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:background="#ccc"
              android:gravity="center"
              android:orientation="vertical"
              tools:context="com.example.fuelmanager.MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/title"
            android:textColor="#000"
            android:textSize="48sp"
            android:textStyle="bold" />

    <Button
            android:id="@+id/btn_fillup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/buttons"
            android:text="@string/menuButton1"
            android:textColor="#fff" />

    <Button
            android:id="@+id/btn_stats"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/buttons"
            android:text="@string/menuButton2"
            android:textColor="#fff" />

</LinearLayout>