<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/statTitle"
                android:textColor="#000"
                android:textSize="32sp"
                android:textStyle="bold" />

        <!--box layout(vertical)-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/boxed_layout"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

            <!--lines-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/border_bottom">

                <TextView
                        android:id="@+id/totalKm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="#000"
                        android:text="@string/stat_total_km"
                        android:textSize="16sp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/totalKmValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="#000"
                            android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/border_bottom">

                <TextView
                        android:id="@+id/totalFuel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="#000"
                        android:text="@string/stat_total_fuel"
                        android:textSize="16sp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/totalFuelValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="#000"
                            android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/border_bottom">

                <TextView
                        android:id="@+id/totalFuelUps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="#000"
                        android:text="@string/stat_total_fuel_ups"
                        android:textSize="16sp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/totalFuelUpsValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="#000"
                            android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/border_bottom">

                <TextView
                        android:id="@+id/totalSum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="#000"
                        android:text="@string/stat_total_sum"
                        android:textSize="16sp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/totalSumValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="#000"
                            android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/border_bottom">

                <TextView
                        android:id="@+id/averageConsumption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="#000"
                        android:text="@string/stat_average"
                        android:textSize="16sp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/averageConsumptionValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="#000"
                            android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/boxed_layout"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_graph1_title"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:gravity="center"/>

            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/graph1"
                    android:layout_width="match_parent"
                    android:layout_height="270dp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/boxed_layout"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_graph2_title"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:gravity="center"/>

            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/graph2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>